--- a/web/static/stylesheets/scenictheme/style.css
+++ b/web/static/stylesheets/scenictheme/style.css
@@ -800,7 +800,7 @@ html, body {
 .hero-content {
     display: table-cell;
     vertical-align: middle;
-    padding-top: 75px;
+    padding-top: 200px;
 }
 
 .hero-text {
@@ -1668,7 +1668,7 @@ a.linkedin-bg:hover {
 #login {
 	position:absolute;
 	bottom: 0;
-	left: 101%;
+	left: 0;
 	width: 100%;
 	height: 400px;
 	border-bottom-right-radius: 15px;
@@ -1709,7 +1709,7 @@ span {
     font-size: 20px;
 }
 
-.toggle-btn {
+/* .toggle-btn {
 	appearance: none;
 	width: 150px;
 	height: 40px;
@@ -1740,3 +1740,5 @@ span {
 	
 	transition: 0.5s;
 }
+ */
+
