--- a/web/static/stylesheets/naturetheme/loginpage.css
+++ b/web/static/stylesheets/naturetheme/loginpage.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-	background-image: url('../assets/woodbg.jpeg');
+	background-image: url('../../assets/woodbg.jpeg');
 
 
 }
