--- a/web/templates/perfagencytemp/base.html
+++ b/web/templates/perfagencytemp/base.html
@@ -65,7 +65,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
 
-                        {% block homebtn %} <li class="active"><a href="/SQL/base" data-toggle="dropdown">Home</a></li> {% endblock %}
+                        {% block homebtn %} <li class="active"><a href="/SQL/home" data-toggle="dropdown">Home</a></li> {% endblock %}
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
