Slight UI tweaks

--- a/web/templates/naturetemp/login.html
+++ b/web/templates/naturetemp/login.html
@@ -31,9 +31,14 @@
 
 		<div class="content">
 			<div id="box">
+
+				<br><br>
+				<div style="font-size: 20px;color: black;">Login</div>
+
 				<form method="post" id="login">
-					<div style="font-size: 20px;margin: 10px;color: white;">Login</div>
 					
+					<br> 
+
 					<span>Username</span>
 					<input class="text" type="text" name="user_name">
 
@@ -48,9 +53,11 @@
 					<input class="button" type="submit" value="Login">
 
 
-					<br><br>
+					<br>
 
 					<div class="error">{{ error }}</div>
+
+					<a href="signup" style="font-size: 20px;">Sign Up</a>
 
 
 				</form>
