--- a/web/templates/perfagencytemp/base.html
+++ b/web/templates/perfagencytemp/base.html
@@ -76,7 +76,7 @@
 
                         </li>
                         <li><a>Contact</a></li>
-                        {% block logoutbtn %}<li><a href="/SQL/login">Log out</a></li> {% endblock %}
+                        {% block logoutbtn %}<li><a href="/SQL/logout">Log out</a></li> {% endblock %}
 
 
                     </ul>
