--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -192,10 +192,10 @@
                         <div class="col-sm-4 sm-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3>Useful Documentation</h3>
+                                    <h3>SQL Timing Attack (Blind Injection)</h3>
                                     <p class="margin-b-5">Chapter 2</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="/SQL/chap2/login" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
