--- a/web/templates/naturetemp/base.html
+++ b/web/templates/naturetemp/base.html
@@ -3,6 +3,12 @@
 <head>
 	<title>My website</title>
 	<link href="{{ url_for('static', filename='stylesheets/naturetheme/homepage.css') }}" rel="stylesheet">
+	<script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>  
+
+	
+	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/sidebar/style.css') }}">
 
 </head>
 <body>
@@ -27,6 +33,76 @@
 			</div>
 		</form>
 	</div>
+
+	<nav class="sidebar close">
+        <header>
+            <div class="image-text">
+
+                <div class="text logo-text">
+                    <span class="name">CTF4Beginners</span>
+                    <span class="profession">XSS Based</span>
+                </div>
+            </div>
+
+            <i class='bx bx-chevron-right toggle'></i>
+        </header>
+
+        <div class="menu-bar">
+            <div class="menu">
+
+                <li class="search-box">
+                    <!-- <i class='bx bx-search icon'></i>
+                    <input type="text" placeholder="Search..."> -->
+                    <a href="#">
+                        <i class='bx bx-search icon' ></i>
+                        <span class="text nav-text">Get a Hint!</span>
+                    </a>
+                </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-bell icon' ></i>
+                            <span class="text nav-text">Hint 1</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-bell icon' ></i>
+                            <span class="text nav-text">Hint 2</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-bell icon' ></i>
+                            <span class="text nav-text">Hint 3</span>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="bottom-content">
+
+                <li class="mode">
+                    <div class="sun-moon">
+                        <i class='bx bx-moon icon moon'></i>
+                        <i class='bx bx-sun icon sun'></i>
+                    </div>
+                    <span class="mode-text text">Dark mode</span>
+
+                    <div class="toggle-switch">
+                        <span class="switch"></span>
+                    </div>
+                </li>
+                
+            </div>
+        </div>
+
+    </nav>
+
+
 	
 	
 </body>
