--- a/web/templates/naturetemp/signup.html
+++ b/web/templates/naturetemp/signup.html
@@ -1,86 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Main Website</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
-	<script src="{{ url_for('static', filename='login.js') }}"></script>  
+{% extends "naturetemp/login.html" %}
 
+{% block title %}<div style="font-size: 20px;color: black;">Sign Up</div>{% endblock %}
 
-	<link href="{{ url_for('static', filename='stylesheets/naturetheme/loginpage.css') }}" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+{% block form %} <form method="post" id="signup"> {%endblock%}
 
-</head>
-
-<style>
-  	.error{
-    	color: red;
-		font-size: 18px;
-        font-style: italic;
-		left: 0;
-		padding-top: 10px;
-		padding-bottom: 10px;    
-    }
-  </style>
-
-<body>
-	<div id="container">
-		<div id="header">Company Name</div>
-
-		<div class="filler">.</div>
-
-		<div class="content">
-			<div id="box">
-
-				<br><br>
-				<div style="font-size: 20px;color: black;">Sign Up</div>
-
-				<form method="post" id="signup">
-					
-                    <br>
-					<span>Username</span>
-					<input class="text" type="text" name="user_name">
-
-					<br><br>
-
-					<!--- Please remember to remove print check for password --->
-					<span>Password</span>
-					<input class="text" type="password" name="password">
-
-					<br><br>
-
-					<input class="button" type="submit" value="Sign Up">
-
-
-					<br>
-
-					<div class="error">{{ error }}</div>
-
-                    <a href="login" style="font-size: 20px;">Login</a>
-
-
-
-				</form>
-			
-		
-			</div>
-		</div>
-
-		<div id="helpbar">
-			<input type="checkbox" class="toggle">
-			<div class="textbox">
-				<div class="text">
-					Hint: How do you alter the conditions of the query to be true?
-					<br><br>
-					<span style="color: red;">{{ query }}</span>
-				</div>
-			</div>
-		</div>
-
-
-		<div id="footer">.</div>
-	</div>
-
-	
-</body>
-</html>
+{% block href %}<a href="login" style="font-size: 20px;">Login</a>{% endblock %}
