--- a/web/static/stylesheets/naturetheme/homepage.css
+++ b/web/static/stylesheets/naturetheme/homepage.css
@@ -1,8 +1,16 @@
+/* Google Font Import - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+
 body {
     margin: 0;
     background: url('../../assets/plantbg.jpeg');
-
-
 }
 
 
