--- a/web/templates/naturetemp/login.html
+++ b/web/templates/naturetemp/login.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<title>Main Website</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
-	<script src="{{ url_for('static', filename='login.js') }}"></script>  
+	<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>  
+	<script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>  
+
 
 
 	<link href="{{ url_for('static', filename='stylesheets/naturetheme/loginpage.css') }}" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
+	<!----======== CSS ======== -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/sidebar/style.css') }}">
 
 </head>
 
@@ -33,9 +42,9 @@
 			<div id="box">
 
 				<br><br>
-				<div style="font-size: 20px;color: black;">Login</div>
+				{% block title %}<div style="font-size: 20px;color: black;">Login</div>{% endblock %}
 
-				<form method="post" id="login">
+				{% block form %} <form method="post" id="login"> {% endblock %}
 					
 					<br> 
 
@@ -57,7 +66,7 @@
 
 					<div class="error">{{ error }}</div>
 
-					<a href="signup" style="font-size: 20px;">Sign Up</a>
+					{% block href %}<a href="signup" style="font-size: 20px;">Sign Up</a>{% endblock %}
 
 
 				</form>
@@ -66,17 +75,75 @@
 			</div>
 		</div>
 
-		<div id="helpbar">
-			<input type="checkbox" class="toggle">
-			<div class="textbox">
-				<div class="text">
-					Hint: How do you alter the conditions of the query to be true?
-					<br><br>
-					<span style="color: red;">{{ query }}</span>
+
+		<nav class="sidebar close">
+			<header>
+				<div class="image-text">
+	
+					<div class="text logo-text">
+						<span class="name">CTF4Beginners</span>
+						<span class="profession">XSS Based</span>
+					</div>
+				</div>
+	
+				<i class='bx bx-chevron-right toggle'></i>
+			</header>
+	
+			<div class="menu-bar">
+				<div class="menu">
+	
+					<li class="search-box">
+						<!-- <i class='bx bx-search icon'></i>
+						<input type="text" placeholder="Search..."> -->
+						<a href="#">
+							<i class='bx bx-search icon' ></i>
+							<span class="text nav-text">Get a Hint!</span>
+						</a>
+					</li>
+	
+						<li class="nav-link">
+							<a href="#">
+								<i class='bx bx-bell icon' ></i>
+								<span class="text nav-text">Hint 1</span>
+							</a>
+						</li>
+	
+						<li class="nav-link">
+							<a href="#">
+								<i class='bx bx-bell icon' ></i>
+								<span class="text nav-text">Hint 2</span>
+							</a>
+						</li>
+	
+						<li class="nav-link">
+							<a href="#">
+								<i class='bx bx-bell icon' ></i>
+								<span class="text nav-text">Hint 3</span>
+							</a>
+						</li>
+	
+					</ul>
+				</div>
+	
+				<div class="bottom-content">
+	
+					<li class="mode">
+						<div class="sun-moon">
+							<i class='bx bx-moon icon moon'></i>
+							<i class='bx bx-sun icon sun'></i>
+						</div>
+						<span class="mode-text text">Dark mode</span>
+	
+						<div class="toggle-switch">
+							<span class="switch"></span>
+						</div>
+					</li>
+					
 				</div>
 			</div>
-		</div>
-
+	
+		</nav>
+	
 
 		<div id="footer">.</div>
 	</div>
