--- a/web/templates/perfagencytemp/base.html
+++ b/web/templates/perfagencytemp/base.html
@@ -6,6 +6,7 @@
     ================================================== -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Agency Perfect</title>
 
@@ -26,6 +27,8 @@
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="../../static/assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../../static/assets/img/favicon.png">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+
 
     <!-- Stylesheets
     ================================================== -->
@@ -35,6 +38,8 @@
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='stylesheets/scenictheme/style.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='stylesheets/scenictheme/responsive.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/sidebar/style.css') }}">
+
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,14 +50,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
-    <script src="{{ url_for('static', filename='login.js') }}"></script>  
+
+
+	<script src="{{ url_for('static', filename='scripts/login.js') }}"></script>  
+	<script src="{{ url_for('static', filename='scripts/sidebar.js') }}"></script>  
+
 
 
 </head>
 <body>
 
     <header id="masthead" class="site-header">
-        <nav id="primary-navigation" class="site-navigation">
+        <div id="primary-navigation" class="site-navigation">
             <div class="container">
 
                 <div class="navbar-header">
@@ -60,7 +69,7 @@
                     <a class="site-title"><span>Agency</span>Perfect</a>
 
                 </div><!-- /.navbar-header -->
-
+            
                 <div class="collapse navbar-collapse" id="agency-navbar-collapse">
 
                     <ul class="nav navbar-nav navbar-right">
@@ -84,10 +93,11 @@
                 </div>
 
             </div>   
-        </nav><!-- /.site-navigation -->
+        </div><!-- /.site-navigation -->
 
     </header><!-- /#mastheaed -->
 
+    
     <div id="hero" class="hero overlay">
         <div class="hero-content">
             <div class="hero-text">
@@ -170,6 +180,74 @@
             </div>
         </div><!-- /.copyright -->
     </footer><!-- /#footer -->
+
+    <nav class="sidebar close">
+        <header>
+            <div class="image-text">
+
+                <div class="text logo-text">
+                    <span class="name">CTF4Beginners</span>
+                    <span class="profession">Injection Based</span>
+                </div>
+            </div>
+
+            <i class='bx bx-chevron-right toggle'></i>
+        </header>
+
+        <div class="menu-bar">
+            <div class="menu">
+
+                <li class="search-box">
+                    <!-- <i class='bx bx-search icon'></i>
+                    <input type="text" placeholder="Search..."> -->
+                    <a href="#">
+                        <i class='bx bx-search icon' ></i>
+                        <span class="text nav-text">Get a Hint!</span>
+                    </a>
+                </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-bell icon' ></i>
+                            <span class="text nav-text">Hint 1</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-bell icon' ></i>
+                            <span class="text nav-text">Hint 2</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-link">
+                        <a href="#">
+                            <i class='bx bx-bell icon' ></i>
+                            <span class="text nav-text">Hint 3</span>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="bottom-content">
+                
+                <li class="mode">
+                    <div class="sun-moon">
+                        <i class='bx bx-moon icon moon'></i>
+                        <i class='bx bx-sun icon sun'></i>
+                    </div>
+                    <span class="mode-text text">Dark mode</span>
+
+                    <div class="toggle-switch">
+                        <span class="switch"></span>
+                    </div>
+                </li>
+                
+            </div>
+        </div>
+
+    </nav>
   
 </body>
 </html>
