--- a/web/templates/agency/base.html
+++ b/web/templates/agency/base.html
@@ -231,6 +231,13 @@
             </div>
 
             <div class="bottom-content">
+
+                <li class=""> 
+                    <a href="http://localhost:5000/"> 
+                        <i class='bx bx-log-out icon' ></i> 
+                        <span class="text nav-text">Back to Main</span> 
+                    </a> 
+                </li> 
                 
                 <li class="mode">
                     <div class="sun-moon">
