--- a/web/templates/agency/login.html
+++ b/web/templates/agency/login.html
@@ -25,13 +25,13 @@
             <form method="post" id="login">
 
                     
-                    <span>Username</span>
+                    <span style="color:white">Username</span>
 					{%block username%}<input class="text" type="text" name="user_name"/>{%endblock%}
 					
                     <br>
 
 					<!--- Please remember to remove print check for password --->
-                    <span>Password</span>
+                    <span style="color:white">Password</span>
 					{%block password%}<input class="text" type="password" name="password"/>{%endblock%}
                     
                    
