--- a/web/templates/agency/signup.html
+++ b/web/templates/agency/signup.html
@@ -24,13 +24,13 @@
 
             <form method="post" id="signup">
                     
-                    <span>Username</span>
+                    <span style="color:white">Username</span>
 					<input class="text" type="text" name="user_name">
 
 					<br>
 
 					<!--- Please remember to remove print check for password --->
-                    <span>Password</span>
+                    <span style="color:white">Password</span>
 					<input class="text" type="password" name="password">
                     
 
