--- a/web/templates/nature/base.html
+++ b/web/templates/nature/base.html
@@ -86,6 +86,13 @@
 
             <div class="bottom-content">
 
+                <li class=""> 
+                    <a href="http://localhost:5000/"> 
+                        <i class='bx bx-log-out icon' ></i> 
+                        <span class="text nav-text">Back to Main</span> 
+                    </a> 
+                </li> 
+
                 <li class="mode">
                     <div class="sun-moon">
                         <i class='bx bx-moon icon moon'></i>
