--- a/web/templates/nature/login.html
+++ b/web/templates/nature/login.html
@@ -48,13 +48,13 @@
 					
 					<br> 
 
-					<span>Username</span>
+					<span style="color:black">Username</span>
 					<input class="text" type="text" name="user_name">
 
 					<br><br>
 
 					<!--- Please remember to remove print check for password --->
-					<span>Password</span>
+					<span style="color:black">Password</span>
 					<input class="text" type="password" name="password">
 
 					<br><br>
@@ -126,6 +126,13 @@
 				</div>
 	
 				<div class="bottom-content">
+
+					<li class=""> 
+						<a href="http://localhost:5000/"> 
+							<i class='bx bx-log-out icon' ></i> 
+							<span class="text nav-text">Back to Main</span> 
+						</a> 
+					</li> 
 	
 					<li class="mode">
 						<div class="sun-moon">
