--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -201,8 +201,39 @@
                         <div class="col-sm-4 sm-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3>Fast Delivery</h3>
+                                    <h3>XXE Injection</h3>
                                     <p class="margin-b-5">Chapter 2</p>
+                                </div>
+                                <a href="#" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <!-- <div class="col-sm-4">
+                            <div class="service" data-height="height">
+                                <div class="service-info">
+                                    <h3>In development...</h3>
+                                    <p class="margin-b-5">Chapter 2</p>
+                                </div>
+                                <a href="#" class="content-wrapper-link"></a>    
+                            </div>
+                        </div> -->
+                    </div>
+                    <!--// end row -->
+
+                    <div class="row row-space-2">
+                        <div class="col-sm-4 sm-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-info">
+                                    <h3>XML (Blind Injection)</h3>
+                                    <p class="margin-b-5">Chapter 3</p>
+                                </div>
+                                <a href="/XML" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <!-- <div class="col-sm-4 sm-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-info">
+                                    <h3>In development...</h3>
+                                    <p class="margin-b-5">Chapter 3</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
                             </div>
@@ -210,12 +241,12 @@
                         <div class="col-sm-4">
                             <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3>Free Plugins</h3>
-                                    <p class="margin-b-5">Chapter 2</p>
+                                    <h3>In development...</h3>
+                                    <p class="margin-b-5">Chapter 3</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <!--// end row -->
                 </div>
