Added new template

--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -167,10 +167,10 @@
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                            <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3 class="color-white">XSS Injection</h3>
-                                    <p class="color-white margin-b-5">Chapter 1</p>
+                                    <h3>XSS Injection</h3>
+                                    <p class="margin-b-5">Chapter 1</p>
                                 </div>
                                 <a href="/XSS/login" class="content-wrapper-link"></a>    
                             </div>
@@ -179,7 +179,7 @@
                             <div class="service" data-height="height">
                               
                                 <div class="service-info">
-                                    <h3>Insecure Deserialization</h3>
+                                    <h3>Insecure Deserialization (Python)</h3>
                                     <p class="margin-b-5">Chapter 1</p>
                                 </div>
                                 <a href="/INSEC" class="content-wrapper-link"></a>    
@@ -199,10 +199,10 @@
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service" data-height="height">
+                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                                 <div class="service-info">
-                                    <h3>XXE Injection</h3>
-                                    <p class="margin-b-5">Chapter 2</p>
+                                    <h3 class="color-white">XXE Injection</h3>
+                                    <p class="color-white margin-b-5">Chapter 2</p>
                                 </div>
                                 <a href="#" class="content-wrapper-link"></a>    
                             </div>
