Added php files

--- a/web/templates/ext/ramenshop.html
+++ b/web/templates/ext/ramenshop.html
@@ -17,15 +17,19 @@
 {%endblock%}
 
 {%block title%}<div id="header" style="color: darkorange;">Welcome!</div>{%endblock%}
-{%block header%}<h4 style="color:floralwhite;"></h4>{%endblock%}
+{%block header%}<h4 style="color:floralwhite;">{{ feedback }}</h4>{%endblock%}
    
         
 {%block name%}<div style="font-size: 25px;margin: 10px;color: cornflowerblue;">Order Form</div>{%endblock%}
 {%block output%}<h3 style="color:black">Please place your order:</h3><br>{%endblock%}
 
-{%block hint%}<textarea name="form" rows=10 cols=5 style="resize: none;" ><name>Tonkatsu Ramen</name><toppings>Add Ajitama Egg</topping><optional>Add Beef</optional></textarea><br><br>{%endblock%}
+{%block hint%}<textarea name="form" rows=10 cols=5 style="resize: none;" ><food>
+    <name>Tonkatsu Ramen</name> 
+    <toppings>Add Ajitama</toppings> 
+    <optional>Add Beef</optional></food></textarea><br><br>{%endblock%}
 
 {%block button%}<input class="button" type="submit" style="background: cornflowerblue;" value="Submit"><br><br>{%endblock%}
+{%block hidden%}<input value = "false" type="hidden" name="res">{%endblock%}
         
 
 {%block form%} {%endblock%}
