--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -204,7 +204,7 @@
                                     <h3 class="color-white">XXE Injection</h3>
                                     <p class="color-white margin-b-5">Chapter 2</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="/XXE" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                         <!-- <div class="col-sm-4">
