--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -176,31 +176,31 @@
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                            <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3 class="color-white">NoSQL Injection</h3>
-                                    <p class="color-white margin-b-5">Chapter 3</p>
+                                    <h3>NoSQL Injection</h3>
+                                    <p class="margin-b-5">Chapter 3</p>
                                 </div>
-                                <a href="#" class="content-wrapper-link"></a>    
+                                <a href="/noSQL" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                     </div>
                     <!--// end row -->
                     <div class="row row-space-2">
                         <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service" data-height="height">
+                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                                 <div class="service-info">
-                                    <h3>XSS (Stored & Reflected)</h3>
-                                    <p class="margin-b-5">Chapter 1</p>
+                                    <h3 class="color-white">XSS (Stored & Reflected)</h3>
+                                    <p class="margin-b-5 color-white">Chapter 1</p>
                                 </div>
                                 <a href="/XSS/login" class="content-wrapper-link"></a>    
                             </div>
                         </div>
                         <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service" data-height="height">
+                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
                                 <div class="service-info">
-                                    <h3>XSS with CSP</h3>
-                                    <p class="margin-b-5">Chapter 2</p>
+                                    <h3 class="color-white">XSS with CSP</h3>
+                                    <p class="margin-b-5 color-white">Chapter 2</p>
                                 </div>
                                 <a href="/XSS2" class="content-wrapper-link"></a>    
                             </div>
@@ -220,10 +220,10 @@
 
                     <div class="row row-space-2">
                         <div class="col-sm-4 sm-margin-b-4">
-                            <div class="service bg-color-base wow fadeInDown" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                            <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3 class="color-white">XXE Injection</h3>
-                                    <p class="color-white margin-b-5">Chapter 1</p>
+                                    <h3>XXE Injection</h3>
+                                    <p class="margin-b-5">Chapter 1</p>
                                 </div>
                                 <a href="/XXE" class="content-wrapper-link"></a>    
                             </div>
