--- a/web/templates/ext/agencylogin.html
+++ b/web/templates/ext/agencylogin.html
@@ -1,6 +1,6 @@
 {% extends "agency/login.html" %}
 
-{% block title %} Hint: How do you brute force a database?{%endblock%}
+<!-- Hint: How do you brute force a database? -->
 
 {% block notes %} <!-- [Add note] --> {% endblock %}
 
