--- a/web/templates/nature/base.html
+++ b/web/templates/nature/base.html
@@ -25,6 +25,8 @@
 
 				{%block output%}<h3>{{ desc|safe }}</h3>{%endblock%}
 
+                {%block flag%}<h3>{{ flag }}</h3> {%endblock%}
+
 				{%block hidden%}<input type="hidden" name="user_name" value="{{ username }}">{%endblock%}
 
 				<input class="input-field" name="desc"><br><br>
