--- a/web/templates/simpletable/base.html
+++ b/web/templates/simpletable/base.html
@@ -93,9 +93,16 @@
 
     <section class="home">   
         <div class="container">
-            <div id="header">Notetaker v4000</div>
+            <div class="header">
+                <div id="header">Notetaker v4000</div>
+                <form method="post">
+                    <input class="button reload" name="refresh" type="submit" value="Reload"><br><br>
+                </form>
 
-            <form method="post">
+            </div>
+            
+
+            <form class="form" method="post">
                 <div class="box">
                     <table class="table" border="1">
                         <tr>
