--- a/web/static/stylesheets/sunset/style.css
+++ b/web/static/stylesheets/sunset/style.css
@@ -18,14 +18,14 @@ body {
 }
 
 
-.container form{
+.container .form{
 
     width: 100vw;
     height: 100vh;
     
     display: grid;
 
-    grid-template-rows: 150px 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 300px 1fr 300px;
 
     justify-items: center;
@@ -33,10 +33,12 @@ body {
     
 }
 
-#header {
+
+.header {
     margin: 20px;
-    grid-column-start:2 ;
-    grid-column-end:3 ;
+    display: grid;
+    grid-template-columns: 800px 1fr;
+    
     color: black;
     font-size: 38px;
 
@@ -47,7 +49,7 @@ body {
 
     grid-column-start:2 ;
     grid-column-end:3 ;
-    grid-row-start:2 ;
+    grid-column-start:2 ;
 
     background-color: white;
 	opacity: 0.9;
@@ -83,6 +85,12 @@ body {
     font-size: 18px;
     width: 20%;
     
+}
+
+.header .reload{
+    margin-left: 10pc;
+    width: 40%;
+
 }
 
 textarea {
