Minor corrections to CTF5 to 9

--- a/web/templates/ext/naturehome.html
+++ b/web/templates/ext/naturehome.html
@@ -1,6 +1,6 @@
 {% extends "nature/base.html" %}
 
-{%block meta%}<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">{%endblock%}
+{%block meta%}<meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src https://*; child-src 'none';">{%endblock%}
 
 {%block title%}<div id="header">Send your feedback to our admin!</div>{%endblock%}
 
