--- a/web/templates/main/index.html
+++ b/web/templates/main/index.html
@@ -231,7 +231,7 @@
                         <div class="col-sm-4 sm-margin-b-4">
                             <div class="service" data-height="height">
                                 <div class="service-info">
-                                    <h3>XXE (Blind Injection)</h3>
+                                    <h3>XML Blind XPath Injection</h3>
                                     <p class="margin-b-5">Chapter 2</p>
                                 </div>
                                 <a href="/XML" class="content-wrapper-link"></a>    
